add: add brigade stats
