# gen/restapi/operations/user_api.go
@@ -49,6 +49,9 @@ func NewUserAPI(spec *loads.Document) *UserAPI {
 		GetUserHandler: GetUserHandlerFunc(func(params GetUserParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation GetUser has not yet been implemented")
 		}),
+		GetUsersStatsHandler: GetUsersStatsHandlerFunc(func(params GetUsersStatsParams, principal interface{}) middleware.Responder {
+			return middleware.NotImplemented("operation GetUsersStats has not yet been implemented")
+		}),
 		PostTokenHandler: PostTokenHandlerFunc(func(params PostTokenParams) middleware.Responder {
 			return middleware.NotImplemented("operation PostToken has not yet been implemented")
 		}),
@@ -112,6 +115,8 @@ type UserAPI struct {
 	DeleteUserUserIDHandler DeleteUserUserIDHandler
 	// GetUserHandler sets the operation handler for the get user operation
 	GetUserHandler GetUserHandler
+	// GetUsersStatsHandler sets the operation handler for the get users stats operation
+	GetUsersStatsHandler GetUsersStatsHandler
 	// PostTokenHandler sets the operation handler for the post token operation
 	PostTokenHandler PostTokenHandler
 	// PostUserHandler sets the operation handler for the post user operation
@@ -205,6 +210,9 @@ func (o *UserAPI) Validate() error {
 	}
 	if o.GetUserHandler == nil {
 		unregistered = append(unregistered, "GetUserHandler")
+	}
+	if o.GetUsersStatsHandler == nil {
+		unregistered = append(unregistered, "GetUsersStatsHandler")
 	}
 	if o.PostTokenHandler == nil {
 		unregistered = append(unregistered, "PostTokenHandler")
@@ -319,6 +327,10 @@ func (o *UserAPI) initHandlerCache() {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
 	o.handlers["GET"]["/user"] = NewGetUser(o.context, o.GetUserHandler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/users/stats"] = NewGetUsersStats(o.context, o.GetUsersStatsHandler)
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
