# swagger/swagger.yml
@@ -85,6 +85,25 @@ paths:
           description: error
           schema:
               $ref: "#/definitions/error"
+  /users/stats:
+    get:
+      security:
+        - Bearer: []
+      produces:
+        - application/json
+      responses:
+        200:
+          description: A list of stats.
+          schema:
+            $ref: "#/definitions/stats"
+        403: 
+          description: 'You do not have necessary permissions for the resource'
+        500:
+          description: 'Internal server error'
+        default:
+          description: error
+          schema:
+              $ref: "#/definitions/error"
 definitions:
   token:
     type: object
@@ -138,6 +157,41 @@ definitions:
         type: string
       PersonDescLink:
         type: string
+  stats:
+    type: object
+    required:
+      - TotalUsers
+      - ActiveUsers
+      - TotalTrafficGB
+    properties:
+      TotalUsers:
+        type: array
+        items:
+          type: object
+          properties:
+            Month: 
+              type: integer
+            Value:
+              type: integer
+      ActiveUsers:
+        type: array
+        items:
+          type: object
+          properties:
+            Month: 
+              type: integer
+            Value:
+              type: integer
+      TotalTrafficGB:
+        type: array
+        items:
+          type: object
+          properties:
+            Month: 
+              type: integer
+            Value:
+              type: number
+              format: float
   error:
     type: object
     required:
